Bug 1395289 - Convert from points to pixels when invalidating rect for screensharing when building on OS X older than 10.8. r=jesup, a=lizzard

When we build for versions of OS X below 10.8 it is still necessary to
convert from points to pixels when invalidating rectangles as we use the
CGRegisterScreenRefreshCallback and CGRegisterMoveCallback interfaces.